fix: disables scrolling on iOS

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body {
   justify-content: center;
   flex-direction: column;
   height: 100%;
+  overflow: hidden;
   overflow-y: hidden;
   margin: 0;
   padding: 0;
